<resources>
    <string name="app_name">ChatApplication</string>
    <string name="need_a_new_account">Need A New Account?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_main_page">Welcome To Main Page</string>
    <string name="welcome_to_chat_app">Welcome To Chat App</string>
    <string name="logout">Logout</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_display_name">Display Name</string>
    <string name="default_status">Hi there, I\'m using chat application</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="default_email">default@gmail.com</string>
    <string name="enter_status">Enter Status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="profile_image">Profile Image</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="total_friends">Total Friends</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="send_message">Send Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="attach_file">Attach File</string>
    <string name="last_seen">Last Seen</string>
    <string name="textview">TextView</string>
</resources>
