<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".ChatActivity">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.8"
        android:layout_height="0dp">

        <include
            android:id="@+id/chat_app_bar"
            layout="@layout/app_bar_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/chat_add_button"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="50dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_black_icon"
            android:contentDescription="@string/attach_file" />

        <TextView
            android:id="@+id/chat_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:background="@android:color/white"
            android:text="@string/enter_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat_send_button"
            app:layout_constraintStart_toEndOf="@+id/chat_add_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/chat_send_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:background="@android:color/white"
            android:contentDescription="@string/send_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/send_black_icon" />


    </LinearLayout>

</LinearLayout>